--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
             </div>
           </div>
           <div class="col-8">
-            <div class="tab-content" id="v-pills-tabContent">
+            <div id="cContent">
               
+            </div>
+            <div id="fContent">
+
             </div>
           </div>
         </div>
