--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <input type="text" class="form-control" id="searchInput" placeholder="City Name" aria-label="searchInput"
                 aria-describedby="searchBtn">
               <div class="input-group-append">
-                <button class="btn btn-outline-primary" type="button" id="searchBtn">Button</button>
+                <button class="btn btn-outline-primary" type="submit" id="searchBtn">Search</button>
               </div>
             </div>
           </form>
@@ -42,7 +42,7 @@
 
           </div>
         </div>
-        <div class="weather">
+        <!-- <div class="weather"> -->
           <div class="cContent" id="cContent">
 
           </div>
@@ -50,7 +50,7 @@
           <div class="fContent" id="fContent">
 
           </div>
-        </div>
+        <!-- </div> -->
       </div>
     </div>
   </section>
