--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <form>
             <h6>Search for a city</h6>
             <div class="input-group mb-3">
-              <input type="text" class="form-control" id="searchInput" placeholder="City Name" aria-label="searchInput"
+              <input type="text" class="form-control" id="searchInput" placeholder="City" aria-label="searchInput"
                 aria-describedby="searchBtn">
               <div class="input-group-append">
                 <button class="btn btn-outline-primary" type="submit" id="searchBtn">Search</button>
